--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dynip
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Output of profiler
+*.prof
+
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
@@ -26,3 +29,4 @@ app
 
 # test apps
 test/cmd/testapp1/testapp1
+test/cmd/simple/simple
